# SPIViewer

./: .pre-commit-config.yaml  m.py  pyproject.toml  readme.md  setup.cfg
spi_viewer/: _ang_binned_statistic.py  _angular_statistic_viewer.py  _pattern_data_model.py  patter_viewer.py  pattern_viewer.py  utils.py
spiviewer/: __init__.py  _ang_binned_statistic.py  _angular_statistic_viewer.py  _pattern_data_model.py  pattern_viewer.py  pg_helper.py
spiviewer/plugins/: __init__.py  geom_refiner.py  multi_circle_roi.py
src/spiviewer/: __init__.py  _ang_binned_statistic.py
src/spiviewer/plugins/: multi_circle_roi.py
