[metadata]
name = spiviewer
version = 0.0.0
author = Shen Zhou
author_email = shen34206@hotmail.com
url = https://github.com/szsdk/SPIViewer
license = GPLv3

[isort]
profile = black
line_length = 88

[flake8]
ignore = E203, E266, E501, E722, W503, F403, E402, F401, F811
max-line-length = 88

[options]
zip_safe = False
include_package_data = True
packages =
    spiviewer
package_dir =
    spiviewer = spiviewer
install_requires =
    matplotlib
    numpy
    cachetools
    pyqtgraph
